# french-debt-sustainability

./: README.md  pyproject.toml
notebooks/: test_animation.py  test_comments.py  test_error.py  test_multicharts.py  test_transform.py  tests.py
src/french_debt_sustainability/: app.py  charts.py  data_loader.py
src/french_debt_sustainability/assets/: styles.css
