[project]
name = "french-debt-sustainability"
version = "0.1.0"
description = "French Finance sustainability with DBnomics Data"
authors = [
    { name = "Juliette.Bornier", email = "juliette.bornier.3110@gmail.com" }
]
dependencies = [
    "dbnomics>=1.2.5",
    "streamlit>=1.38.0",
    "streamlit-option-menu>=0.3.13",
    "pandas>=2.2.2",
    "ipykernel>=6.29.5",
    "pip>=24.2",
    "plotly>=5.24.0",
    "plotly-express>=0.4.1",
    "nbformat>=5.10.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/french_debt_sustainability"]
